--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,32 @@ a {
   text-decoration: none;
 }
 
-* {
+#__next {
+  padding: 42px;
+}
+
+*:not(ul) {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+.card {
+  padding: 8px;
+  border: 1px solid black;
+  margin: 4px;
+  border-radius: 10px;
+}
+
+p,
+p2 {
+  padding: 4px;
+}
+
+p {
+  font-weight: 800;
+}
+
+p2 {
+  font-size: 14px;
 }
